--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,13 @@
 </head>
 
   <body>
+    <%= render 'layouts/menu'%>
 
     <div class="container">
     <%= yield %>
+        <div class="wrap">
+          <%= render 'layouts/footer'%>
+        </div>
     </div>
 
   </body>
