--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -53,4 +53,50 @@
       <%= f.submit "Add New Project" %>
     </div>
   <% end %>
+
+<!-- PAPERS -->
+
+<h2 class="text-center">Papers</h1>
+<div>
+  <%= render "papers/view.html.erb" %>
+</div>
+
+<div>
+  <h2>Add new paper</h1>
+  <%= form_for([@authority, @authority.papers.new]) do |f| %>
+    <div class="form-group">
+      <%= f.label :title %><br>
+      <%= f.text_field :title %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description %><br>
+      <%= f.text_area :description, size: "auto" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :published %><br>
+      <%= f.date_select :published, selected: Date.today, min: 5.years.ago %>
+    </div>
+    <div class="form-group">
+      <%= f.label :url %><br>
+      <%= f.text_field :url %>
+    </div>
+
+    <%= f.fields_for :photos, f.object.photos.new do |ff| %>
+      <h2>Add photo</h2>
+          <div class="field">
+            <%= ff.file_field :file %><br>
+          </div>
+          <div class="field">
+            <%= ff.label :description %>
+            <%= ff.text_field :description %>
+          </div>
+    <% end %>
+
+
+    <div class="actions form-group">
+      <%= f.submit "Add New Paper" %>
+    </div>
+  <% end %>
+
+
 </div>
