--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<div class='row animated bounceInDown'>
     <div class='row animated bounceInDown'>
       <%= image_tag url_for(:controller => "photos", :action => "show", :authority_id=>@authority.id, :id=>@authority.photos[0][:id]), class: "col-md-3 img-thumbnail"%>
       <%= content_tag :h2, "#{@authority.title} #{@authority.name} #{@authority.surname}", class: "shadow"%>
@@ -12,8 +11,8 @@
     </div>
 
     <hr id="prj" class='animated fadeInRight'>
-    <h2 class="shadow text-center animated fadeInUp">Projects</h1>
     <div class='row'>
+    <h2 class="shadow text-center animated fadeInUp">Projects</h1>
     <%= render @projects %>
     </div>
 
@@ -24,14 +23,15 @@
     </div>
 
     <hr id="phts" class='animated fadeInRight'>
-
-    <h2 class="shadow text-center animated fadeInUp">Photos</h1>
     <div class="carousel_wrap">
+    <h2 class="shadow text-center animated fadeInUp">Photos</h1>
     <%= render 'layouts/carousel_photos' %>
     </div>
 
-
-
+    <hr id="cnts" class='animated fadeInRight'>
+    <div class='contact text-center'>
+    <h2 class="shadow animated fadeInUp">Contact</h1>
+    <%= render @contacts %>
+    </div>
 
 <%= link_to 'New Authority', new_authority_path %>
-</div>
