--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -98,5 +98,44 @@
     </div>
   <% end %>
 
+  <hr class='well'>
+
+  <h2 class="text-center"> Contact</h1>
+  <div>
+    <%= render 'contacts/view.html.erb'%>
+  </div>
+
+  <div>
+    <h2>Add new contact</h1>
+    <%= form_for([@authority, @authority.contacts.new]) do |f| %>
+    <div class="form-group">
+      <%= f.label :street %><br>
+      <%= f.text_field :street %>
+    </div>
+    <div class="form-group">
+      <%= f.label :city %><br>
+      <%= f.text_field :city %>
+    </div>
+    <div class="form-group">
+      <%= f.label :postcode %><br>
+      <%= f.text_field :postcode %>
+    </div>
+    <div class="form-group">
+      <%= f.label :country %><br>
+      <%= f.text_field :country %>
+    </div>
+    <div class="form-group">
+      <%= f.label :phone %><br>
+      <%= f.number_field :phone %>
+    </div>
+    <div class="form-group">
+      <%= f.label :email %><br>
+      <%= f.text_field :email %>
+    </div>
+      <div class="actions">
+        <%= f.submit "Add New contact" %>
+      </div>
+    <% end %>
+  </div>
 
 </div>
