--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -15,6 +15,16 @@
         <li><%= link_to "Papers", "/#ppr"%></li>
         <li><%= link_to "Photos", "/#phts"%></li>
         <li><%= link_to "Contact", "/#cnts"%></li>
+        <li><%= link_to "Teams' members", teams_path%></li>
+
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Data edit
+            <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Main page", authority_path(Authority.first)%></li>
+            <li><%= link_to "Teams edit", view_teams_path%></li>
+          </ul>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
