--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,7 @@
 <div class="team">
 <h1 class="text-center animated fadeInUp">Our people</h1>
-    <% @team.each do |team| %>
+<% if @teams.present? %>
+    <% @teams.each do |team| %>
     <div class='col-sm-2 col-md-3 col-xs-12 text-center'>
         <%= link_to [team] do%>
         <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>team.id)%>
@@ -8,6 +9,7 @@
         <% end%>
     </div>
       <% end %>
+  <% end %>
     <div class="col-md-12">
         <%= link_to 'Back', authorities_path, class: "label-back" %>
     </div>
