--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
 <div class='team row'>
-    <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>team.id)%>
+    <%= image_tag url_for(:controller => "photos", :action => "show_team", :team_id=>@team.id)%>
     <%= content_tag :h4, "#{@team.title} #{@team.name} #{@team.surname}", class: "col-md-9 text-justify"%>
     <%= content_tag :h5, "#{@team.about}", class: "col-md-9 text-justify"%>
     <div>
