--- a/app/views/contacts/_view.html.erb
+++ b/app/views/contacts/_view.html.erb
@@ -11,7 +11,7 @@
 
 <div class="text-center">
   <%= link_to 'Edit', [:edit, @authority, contact], class: "btn btn-default" %>
-  <%= link_to 'Delete', [@authority, contact], class: "btn btn-default", method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Delete', [@authority, contact], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
 <hr>
