--- a/app/views/projects/_view.html.erb
+++ b/app/views/projects/_view.html.erb
@@ -6,12 +6,19 @@
   <%= content_tag :h5, "Start date: #{project.started}", class: "col-md-4"%>
   <%= content_tag :h5, "Closing date: #{project.finished}", class: "col-md-4"%>
   <%= content_tag :h5, "URL: #{project.url}", class: "col-md-4"%>
+
   <%= content_tag :h4, "Project team", class: "col-md-12"%>
+  <% project.teams.each do |c|%>
+  <div class="col-md-3">
+   <%= content_tag :h5, "#{c.title+' '+c.name+' '+c.surname}" %>
+  <%= link_to "Delete", authority_project_pteams_path(@authority, project, c), class: "label-edit", method: :delete %>
+  </div>
+  <% end%>
 </div>
 
 <div class="text-center">
   <%= link_to 'Edit', [:edit, @authority, project], class: "btn btn-default"%>
-  <%= link_to 'Delete', [@authority, project], class: "btn btn-default", method: :delete, data: { confirm: 'Are you sure?' } %>
+  <%= link_to 'Delete', [@authority, project], class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 <hr>
 <% end %>
