--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -5,6 +5,8 @@
       <%= content_tag :h5, "Start date: #{@project.started}", class: "col-md-4"%>
       <%= content_tag :h5, "Closing date: #{@project.finished}", class: "col-md-4"%>
       <%= content_tag :h5, "URL: #{@project.url}", class: "col-md-4"%>
+      <%= content_tag :h4, "Project team", class: "col-md-12"%>
+      <%= content_tag :h5, "#{@project.teams.map {|c| c.title+' '+c.name+' '+c.surname}.join(', ')}", class: "col-md-12" %>
       <div>
         <%= link_to 'Back', "/#prj", class: "label-back" %>
       </div>
