--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -34,7 +34,7 @@
                             :project_id=>ff.object.project_id), class: "col-md-3 img-thumbnail"%>
       <div class="field">
         <p><%= ff.object.filename %></p>
-        <%= ff.file_field :file %><br>
+        <%= ff.file_field :file, class: "btn btn-primary" %><br>
       </div>
       <div class="field">
           <%= ff.label :description %>
@@ -44,7 +44,7 @@
     <% else %>
     <h2>Add photo</h2>
         <div class="field">
-          <%= ff.file_field :file %><br>
+          <%= ff.file_field :file, class: "btn btn-primary" %><br>
         </div>
         <div class="field">
           <%= ff.label :description %>
@@ -54,7 +54,10 @@
     <% end %>
   <% end %>
 
-
+  <div class="field">
+  <%= f.label "Choose team member" %><br>
+  <%= f.collection_select 'team_ids', Team.all, :id, :name_with_initial %>
+  </div>
 
   <div class="actions">
     <%= f.submit %>
